force-app/main/default/objects/License__c/License__c.object-meta.xml
<CustomObject>
    <label>License</label>
    <nameField>
        <displayFormat>LIC-{0000}</displayFormat>
        <label>License Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>