force-app/main/default/objects/License__c/fields/Address_Change_Count__c.field-meta.xml
<CustomField>
    <fullName>Address_Change_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of times the address has been changed</inlineHelpText>
    <label>Address Change Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>