force-app/main/default/objects/License__c/fields/Business_City__c.field-meta.xml
<CustomField>
    <fullName>Business_City__c</fullName>
    <inlineHelpText>City where the licensed business operates</inlineHelpText>
    <label>Business City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>