force-app/main/default/objects/License__c/fields/Business_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Country__c</fullName>
    <defaultValue>&quot;United States&quot;</defaultValue>
    <inlineHelpText>Country where the business operates</inlineHelpText>
    <label>Business Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>