force-app/main/default/objects/License__c/fields/Business_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Postal_Code__c</fullName>
    <inlineHelpText>ZIP/Postal code of the business location</inlineHelpText>
    <label>Business Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>