force-app/main/default/objects/License__c/fields/Business_State__c.field-meta.xml
<CustomField>
    <fullName>Business_State__c</fullName>
    <inlineHelpText>State where the licensed business operates</inlineHelpText>
    <label>Business State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Alabama</fullName><default>false</default><label>Alabama</label></value>
            <value><fullName>Alaska</fullName><default>false</default><label>Alaska</label></value>
            <value><fullName>Arizona</fullName><default>false</default><label>Arizona</label></value>
            <value><fullName>Arkansas</fullName><default>false</default><label>Arkansas</label></value>
            <value><fullName>California</fullName><default>false</default><label>California</label></value>
            <value><fullName>Colorado</fullName><default>false</default><label>Colorado</label></value>
            <value><fullName>Connecticut</fullName><default>false</default><label>Connecticut</label></value>
            <value><fullName>Delaware</fullName><default>false</default><label>Delaware</label></value>
            <value><fullName>Florida</fullName><default>false</default><label>Florida</label></value>
            <value><fullName>Georgia</fullName><default>false</default><label>Georgia</label></value>
            <value><fullName>Hawaii</fullName><default>false</default><label>Hawaii</label></value>
            <value><fullName>Idaho</fullName><default>false</default><label>Idaho</label></value>
            <value><fullName>Illinois</fullName><default>false</default><label>Illinois</label></value>
            <value><fullName>Indiana</fullName><default>false</default><label>Indiana</label></value>
            <value><fullName>Iowa</fullName><default>false</default><label>Iowa</label></value>
            <value><fullName>Kansas</fullName><default>false</default><label>Kansas</label></value>
            <value><fullName>Kentucky</fullName><default>false</default><label>Kentucky</label></value>
            <value><fullName>Louisiana</fullName><default>false</default><label>Louisiana</label></value>
            <value><fullName>Maine</fullName><default>false</default><label>Maine</label></value>
            <value><fullName>Maryland</fullName><default>false</default><label>Maryland</label></value>
            <value><fullName>Massachusetts</fullName><default>false</default><label>Massachusetts</label></value>
            <value><fullName>Michigan</fullName><default>false</default><label>Michigan</label></value>
            <value><fullName>Minnesota</fullName><default>false</default><label>Minnesota</label></value>
            <value><fullName>Mississippi</fullName><default>false</default><label>Mississippi</label></value>
            <value><fullName>Missouri</fullName><default>false</default><label>Missouri</label></value>
            <value><fullName>Montana</fullName><default>false</default><label>Montana</label></value>
            <value><fullName>Nebraska</fullName><default>false</default><label>Nebraska</label></value>
            <value><fullName>Nevada</fullName><default>false</default><label>Nevada</label></value>
            <value><fullName>New Hampshire</fullName><default>false</default><label>New Hampshire</label></value>
            <value><fullName>New Jersey</fullName><default>false</default><label>New Jersey</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>