force-app/main/default/objects/License__c/fields/Business_Street__c.field-meta.xml
<CustomField>
    <fullName>Business_Street__c</fullName>
    <inlineHelpText>Street address where the licensed business operates</inlineHelpText>
    <label>Business Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>