force-app/main/default/objects/License__c/fields/Card_Reprint_Required__c.field-meta.xml
<CustomField>
    <fullName>Card_Reprint_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flags when a new license card needs to be printed and mailed</inlineHelpText>
    <label>Card Reprint Required</label>
    <type>Checkbox</type>
</CustomField>