force-app/main/default/objects/License__c/fields/Last_Address_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Address_Change_Date__c</fullName>
    <inlineHelpText>Timestamp of the most recent address change</inlineHelpText>
    <label>Last Address Change Date</label>
    <type>DateTime</type>
</CustomField>