force-app/main/default/objects/License__c/validationRules/Block_Direct_Address_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Direct_Address_Changes</fullName>
    <active>true</active>
    <description>Prevents users from directly editing business address fields. Address changes require payment of $50 and must be submitted through the official Request Address Change process.</description>
    <errorConditionFormula>AND(
    OR(
        ISCHANGED(Business_Street__c),
        ISCHANGED(Business_City__c),
        ISCHANGED(Business_State__c),
        ISCHANGED(Business_Postal_Code__c),
        ISCHANGED(Business_Country__c)
    ),
    NOT($Setup.Bypass_Validation__c.Allow_Address_Change__c)
)</errorConditionFormula>
    <errorMessage>Address changes require approval and payment of $50. Please use the &apos;Request Address Change&apos; button to submit your request through the official process.</errorMessage>
</ValidationRule>