force-app/main/default/objects/License__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>License_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Expiration_Date__c</columns>
</ListView>